tests/NormalTests/paczka1/fuzzy1/99507846.err
Error in line 4: WoceQi A81 64,4
Error in line 19: aitnB S495 2,4
Error in line 29: hsTAOmc S495 54,0
Error in line 31: hsTAOmc A802 33,0
